# projects-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  sonar-project.properties
.github/workflows/: build.yaml  cicd.yaml  clang-format.yaml  doxygen.yaml  doxygen_push.yaml  sonarcloud.yaml
coding_problems/: CMakeLists.txt
coding_problems/amstrong_number/: main.cc
coding_problems/hex_string/: main.cc
coding_problems/multithreading_interrupt/: CMakeLists.txt  main_cpp.cc
coding_problems/multithreading_odd_even_print/: print_odd_even.c  print_odd_even.cc
coding_problems/thread_inherritance/: CMakeLists.txt  main.cc
coding_problems/variable_input/: main.cc
design_pattern/: CMakeLists.txt
design_pattern/structural/composite/: CMakeLists.txt  main.cc
docs/: reference.md
doxygen/: CMakeLists.txt  Doxyfile.in
interview/: questions.md
multithreading_interrupt/: CMakeLists.txt  main.cc  main_cpp.cc
multithreading_odd_even_print/: CMakeLists.txt  print_odd_even.c  print_odd_even.cc  print_odd_even_cond.c  print_odd_even_semaphore.c
public_types/: CMakeLists.txt
public_types/include/: span.h
public_types/include/public_types/: error_codes.h  log.h  span.h
public_types/test/: test_error_code.cc  test_log.cc  test_span.cc
questions/: cpp.md
template/tcp/: CMakeLists.txt
template/tcp/include/tcp/: client.h  server.h
template/tcp/src/: client.cc  server.cc
thread_inherritance/: CMakeLists.txt  main.cc
tools/: check_clangformat.sh  run_clangformat.sh
utilities/: CMakeLists.txt
utilities/include/utilities/: bytestream.h  clog.h  log.h  log_config.h  log_level.h  test_fixture.h  thread.h  tmp.h
utilities/include/utilities/tcp/: client.h  server.h
utilities/src/: bytestream.cc  client.cc  clog.cc  log.cc  log_config.cc  server.cc  test_fixture.cc  thread.cc
utilities/test/: test_bytestream.cc  test_clog.cc  test_log.cc  test_log_config.cc  test_log_level.cc  test_tcp.cc  test_thread.cc  test_tmp.cc
