add_executable(amstrong_number
    amstrong_number/main.cc
)

add_executable(hex_string
    hex_string/main.cc
)

add_executable(variable_input
    variable_input/main.cc
)

add_subdirectory(multithreading_interrupt)
add_subdirectory(multithreading_odd_even_print)
add_subdirectory(thread_inherritance)
